--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  
+  <header class="header"></header>
+
+  <main>
+    
+  </main>
+
 </body>
 </html>
